--- a/simulations/EdgeBigScenario/omnetpp.ini
+++ b/simulations/EdgeBigScenario/omnetpp.ini
@@ -1,95 +1,55 @@
 [General]
-## TEMPORAL
+# General settings
+network = BigNet
+sim-time-limit = 1h
 print-undisposed=true
 
-## Time resolution
-sim-time-limit = 1h
-#simtime-resolution = ps
+include signals-and-events.ini
 
-## Comand line environment
-cmdenv-express-mode = true
-cmdenv-performance-display=true
-cmdenv-event-banners=true
-#ned-path = ../../src;../;
+# DataEngine settings
+*.simData.manager.experiment = "Test"
+*.simData.engine.typename = "JsonDataEngine"
+*.simData.engine.apps = readJSON("../../database/json/apps.json")
+*.simData.engine.vms = readJSON("../../database/json/vms.json")
+*.simData.engine.slas = []
+*.simData.engine.users = []
+*.simData.engine.experiments = []
 
-## Network
-network = BigNet
-
-## Log
-**.cloudProvider.cmdenv-log-level = off
-**.userGenerator.cmdenv-log-level = error
-**.dcManager.cmdenv-log-level = error
-**.cmdenv-log-level = off	## off, error, info, debug and trace
-cmdenv-log-prefix = "(%t):[%l] %m  "
-
-## Allow to examine details of recorded history of a simulation, focusing on the behavior instead of the statistical results.
-#record-eventlog = false
-#**.module-eventlog-recording = false
-eventlog-message-detail-pattern = *:userID,strVmId,isResponse,operation,result
-
-## Recording of simulation results - recordScalar() - recordStatistic()
-
-#**.statistic-recording = false  ## from a @statistic in ned file
-#**.scalar-recording = false ## scalar or a statistic object (cStdDev to record summary statistics)
-#**.vector-recording = false ## output vector (recorded using cOutVector objects)
-#**.bin-recording = false ##  bins of a histogram object (cHistogram, cPSquare, cKSplit)
-
-**.sensor**.statistic-recording = false
-**.actuator**.statistic-recording = false
-**.ap.**.statistic-recording = false
-**.dns**.statistic-recording = false
-**.eth[*].**.statistic-recording = false
-**.ipv4.**.statistic-recording = false
-
-**.dns**.scalar-recording = false
-**.ap.**.scalar-recording = false
-**.sensor**.scalar-recording = false
-**.actuator**.scalar-recording = false
-**.eth[*].**.scalar-recording = false
-**.ipv4.**.scalar-recording = false
-
-## Random seeds fix
+# Pseudo-random seeds fix
 num-rngs = 12
 
-**.localA.ipv4Delayer.rng-0 = 1
-**.localA.ipv4Delayer.config = xmldoc("local.xml")
-**.localB.ipv4Delayer.rng-0 = 2
-**.localB.ipv4Delayer.config = xmldoc("local.xml")
-**.localC.ipv4Delayer.rng-0 = 3
-**.localC.ipv4Delayer.config = xmldoc("local.xml")
-**.localD.ipv4Delayer.rng-0 = 4
-**.localD.ipv4Delayer.config = xmldoc("local.xml")
-**.localE.ipv4Delayer.rng-0 = 5
-**.localE.ipv4Delayer.config = xmldoc("local.xml")
+*.localA.ipv4Delayer.rng-0 = 1
+*.localB.ipv4Delayer.rng-0 = 2
+*.localC.ipv4Delayer.rng-0 = 3
+*.localD.ipv4Delayer.rng-0 = 4
+*.localE.ipv4Delayer.rng-0 = 5
+*.metroA.ipv4Delayer.rng-0 = 6
+*.metroB.ipv4Delayer.rng-0 = 7
+*.metroC.ipv4Delayer.rng-0 = 8
+*.metroD.ipv4Delayer.rng-0 = 9
+*.metroE.ipv4Delayer.rng-0 = 10
+*.backbone*.ipv4Delayer.rng-0 = 11
 
-**.metroA.ipv4Delayer.rng-0 = 6
-**.metroA.ipv4Delayer.config = xmldoc("metropolitan.xml")
-**.metroB.ipv4Delayer.rng-0 = 7
-**.metroB.ipv4Delayer.config = xmldoc("metropolitan.xml")
-**.metroC.ipv4Delayer.rng-0 = 8
-**.metroC.ipv4Delayer.config = xmldoc("metropolitan.xml")
-**.metroD.ipv4Delayer.rng-0 = 9
-**.metroD.ipv4Delayer.config = xmldoc("metropolitan.xml")
-**.metroE.ipv4Delayer.rng-0 = 10
-**.metroE.ipv4Delayer.config = xmldoc("metropolitan.xml")
+*.usersA[*].sensor[*].model.rng-0 = 6
+*.usersB[*].sensor[*].model.rng-0 = 7
+*.usersC[*].sensor[*].model.rng-0 = 8
+*.usersD[*].sensor[*].model.rng-0 = 9
+*.usersE[*].sensor[*].model.rng-0 = 10
 
-**.backbone*.ipv4Delayer.rng-0 = 11
-**.backbone*.ipv4Delayer.config = xmldoc("backbone.xml")
 
-# SimSchema settings
-*.simData.simSchema.typename = "SimSchemaMySQL"
-*.simData.simSchema.hostName = "tcp://127.0.0.1:3306"
-*.simData.manager.experiment = "Test"
-
-# Routing settings
+# Networking settings
+*.local*.ipv4Delayer.config = xmldoc("network/local.xml")
+*.metro*.ipv4Delayer.config = xmldoc("network/metropolitan.xml")
+*.backbone*.ipv4Delayer.config = xmldoc("network/backbone.xml")
+*.configurator.config = readXML("network/networkconf.xml")
+*.dns.db.zoneConfig = readJSON("network/dnszones.json")
 **.ipv4.arp.typename = "GlobalArp"
-**.ipv4.routingTable.netmaskRoutes = ""
+#**.ipv4.routingTable.netmaskRoutes = ""
 
 
-# Blades settings
+# Dc - Blades settings
 *.dc.numBlades = 40
 *.dc.blade[*].staticAppAssignment = false
-*.dc.blade[*].isVirtualHardware = true
 *.dc.blade[*].maxUsers = 16
 *.dc.blade[*].maxVMs = 16
 *.dc.blade[*].numCpuCores = 16
@@ -100,10 +60,9 @@ num-rngs = 12
 *.dc.blade[*].cpu.cpuCore[*].speed = 60000
 *.dc.blade[*].cpu.cpuCore[*].tick = 60s
 
-# Blades settings
+# Fog - Blades settings
 *.fg*.numBlades = 1
 *.fg*.blade[*].staticAppAssignment = false
-*.fg*.blade[*].isVirtualHardware = true
 *.fg*.blade[*].maxUsers = 8
 *.fg*.blade[*].maxVMs = 8
 *.fg*.blade[*].numCpuCores = 8
@@ -114,53 +73,21 @@ num-rngs = 12
 *.fg*.blade[*].cpu.cpuCore[*].speed = 60000
 *.fg*.blade[*].cpu.cpuCore[*].tick = 60s
 
-## Config Ip assignment
-*.configurator.config = xml("<config> \
-	<interface hosts='*.dns' address='10.0.0.1'/> \
-	<interface hosts='**' address='10.x.x.x' netmask='255.x.x.x'/> \
-</config>")
-#*.configurator.dumpConfig = "ips.xml"
+# Zoning the nodes
+*.dc.zone = "cloud"
+*.fgA*.zone = "fg-a"
+*.fgB*.zone = "fg-b"
+*.fgC*.zone = "fg-c"
+*.fgD*.zone = "fg-d"
+*.fgE*.zone = "fg-e"
 
+# Pointers to the DataManager/MessageQueue/DNS
+**.dataManagerPath = "simData.manager"
+**.smqIp = "10.0.0.1"
+**.dns = "10.0.0.2"
+**.ispResolver = "10.0.0.2"
 
-# Data Centre Settings
-**.dc.serviceDeployed = "service"
-**.dc.**.hasCloudEvents = false
-**.dc.**.enableQueue = false
-**.dc.stack.numApps = 1
-**.dc.stack.app[0].typename = "SimService"
-**.dc.stack.app[0].replyDelay = 0s
-**.dc.stack.app[0].localPort = 443
-
-# Fog Node settings
-**.fg*.stack.numApps = 1
-**.fg*.stack.app[0].typename = "SimService"
-**.fg*.stack.app[0].replyDelay = 0s
-**.fg*.stack.app[0].localPort = 443
-**.fg*.**.enableQueue = false
-**.fg*.**.hasCloudEvents = false
-
-# Deployment of fog node services
-**.fgA1.serviceDeployed = "fgA1"
-**.fgA2.serviceDeployed = "fgA2"
-**.fgA3.serviceDeployed = "fgA3"
-
-**.fgB1.serviceDeployed = "fgB1"
-**.fgB2.serviceDeployed = "fgB2"
-**.fgB3.serviceDeployed = "fgB3"
-
-**.fgC1.serviceDeployed = "fgC1"
-**.fgC2.serviceDeployed = "fgC2"
-**.fgC3.serviceDeployed = "fgC3"
-
-**.fgD1.serviceDeployed = "fgD1"
-**.fgD2.serviceDeployed = "fgD2"
-**.fgD3.serviceDeployed = "fgD3"
-
-**.fgE1.serviceDeployed = "fgE1"
-**.fgE2.serviceDeployed = "fgE2"
-**.fgE3.serviceDeployed = "fgE3"
-
-# Users config
+# Select kind of tile/users
 *.usersA[0..1].typename = "SmartBuilding"
 *.usersA[2..3].typename = "SmartFactory"
 *.usersA[4..7].typename = "SmartFarm"
@@ -186,42 +113,13 @@ num-rngs = 12
 *.usersE[4..7].typename = "SmartFarm"
 *.usersE[8..19].typename = "SmartHouse"
 
-**.controller.ns.dns = "10.0.0.1"
-
-*.usersA[*].sensor[*].model.rng-0 = 6
-*.usersB[*].sensor[*].model.rng-0 = 7
-*.usersC[*].sensor[*].model.rng-0 = 8
-*.usersD[*].sensor[*].model.rng-0 = 9
-*.usersE[*].sensor[*].model.rng-0 = 10
-
 
 [Config targetDc]
-#repeat=5
-*.user*.serviceName = "service"
+*.users*.user.deploymentZone = "cloud"
 
 [Config targetFog]
-#repeat=5
-*.usersA[0..1].serviceName =   "fgA1"
-*.usersA[2..7].serviceName =   "fgA2"
-*.usersA[8..15].serviceName =  "fgA3"
-*.usersA[16..19].serviceName =  "service"
-
-*.usersB[0..1].serviceName =   "fgB1"
-*.usersB[2..7].serviceName =   "fgB2"
-*.usersB[8..15].serviceName =  "fgB3"
-*.usersB[16..19].serviceName =  "service"
-
-*.usersC[0..1].serviceName =   "fgC1"
-*.usersC[2..7].serviceName =   "fgC2"
-*.usersC[8..15].serviceName =  "fgC3"
-*.usersC[16..19].serviceName =  "service"
-
-*.usersD[0..1].serviceName =   "fgD1"
-*.usersD[2..7].serviceName =   "fgD2"
-*.usersD[8..15].serviceName =  "fgD3"
-*.usersD[16..19].serviceName =  "service"
-
-*.usersE[0..1].serviceName =   "fgE1"
-*.usersE[2..7].serviceName =   "fgE2"
-*.usersE[8..15].serviceName =  "fgE3"
-*.usersE[16..19].serviceName =  "service"
+*.usersA[*].user.deploymentZone = "fg-a"
+*.usersB[*].user.deploymentZone = "fg-b"
+*.usersC[*].user.deploymentZone = "fg-c"
+*.usersD[*].user.deploymentZone = "fg-d"
+*.usersE[*].user.deploymentZone = "fg-e"
