feat(EdgeBigScenario): Adapted this experiment to the new updates
Also corrected errors and optimized routing so that it runs even faster.

--- a/database/json/apps.json
+++ b/database/json/apps.json
@@ -103,7 +103,7 @@
         "package": "s2f.apps.iot",
         "parameters": {
             "serviceName": "",
-            "synthSize": "3MB",
+            "synthSize": "400B",
             "pingsThreshold": "10",
             "processingMIs": "100"
         }
