--- a/simulations/EdgeBigScenario/omnetpp.ini
+++ b/simulations/EdgeBigScenario/omnetpp.ini
@@ -2,6 +2,7 @@
 # General settings
 network = BigNet
 sim-time-limit = 1h
+#sim-time-limit = 100s
 print-undisposed=true
 
 include signals-and-events.ini
@@ -41,11 +42,16 @@ num-rngs = 12
 *.local*.ipv4Delayer.config = xmldoc("network/local.xml")
 *.metro*.ipv4Delayer.config = xmldoc("network/metropolitan.xml")
 *.backbone*.ipv4Delayer.config = xmldoc("network/backbone.xml")
-*.configurator.config = readXML("network/networkconf.xml")
 *.dns.db.zoneConfig = readJSON("network/dnszones.json")
 **.ipv4.arp.typename = "GlobalArp"
+*.users*.enableRouterAsUplink = false
+#**.tcp.mss = 1460
 #**.ipv4.routingTable.netmaskRoutes = ""
 
+## Use this to accelerate network setup once fastnetworkconf is correct
+#*.configurator.config = readXML("network/networkconf.xml")
+#*.configurator.dumpConfig = "network/fastnetworkconf.xml"
+*.configurator.config = readXML("network/fastnetworkconf.xml")
 
 # Dc - Blades settings
 *.dc.numBlades = 40
@@ -66,8 +72,8 @@ num-rngs = 12
 *.fg*.blade[*].maxUsers = 8
 *.fg*.blade[*].maxVMs = 8
 *.fg*.blade[*].numCpuCores = 8
-*.fg*.blade[*].memorySize = 16GB
-*.fg*.blade[*].diskSize = 2000GB
+*.fg*.blade[*].memorySize = 16GiB
+*.fg*.blade[*].diskSize = 2TiB
 *.fg*.blade[*].diskReadBandwidth = 500Mbps
 *.fg*.blade[*].diskWriteBandwidth = 500Mbps
 *.fg*.blade[*].cpu.cpuCore[*].speed = 60000
@@ -75,11 +81,11 @@ num-rngs = 12
 
 # Zoning the nodes
 *.dc.zone = "cloud"
-*.fgA*.zone = "fg-a"
-*.fgB*.zone = "fg-b"
-*.fgC*.zone = "fg-c"
-*.fgD*.zone = "fg-d"
-*.fgE*.zone = "fg-e"
+*.fgA*.zone = "edge-a"
+*.fgB*.zone = "edge-b"
+*.fgC*.zone = "edge-c"
+*.fgD*.zone = "edge-d"
+*.fgE*.zone = "edge-e"
 
 # Pointers to the DataManager/MessageQueue/DNS
 **.dataManagerPath = "simData.manager"
@@ -113,13 +119,14 @@ num-rngs = 12
 *.usersE[4..7].typename = "SmartFarm"
 *.usersE[8..19].typename = "SmartHouse"
 
+*.users*[0..1].user.startupTime = 0.75s
 
 [Config targetDc]
 *.users*.user.deploymentZone = "cloud"
 
 [Config targetFog]
-*.usersA[*].user.deploymentZone = "fg-a"
-*.usersB[*].user.deploymentZone = "fg-b"
-*.usersC[*].user.deploymentZone = "fg-c"
-*.usersD[*].user.deploymentZone = "fg-d"
-*.usersE[*].user.deploymentZone = "fg-e"
+*.usersA[*].user.deploymentZone = "edge-a"
+*.usersB[*].user.deploymentZone = "edge-b"
+*.usersC[*].user.deploymentZone = "edge-c"
+*.usersD[*].user.deploymentZone = "edge-d"
+*.usersE[*].user.deploymentZone = "edge-e"
