simple simulation scenario with five peers

--- a/simulations/P2PShowcase/omnetpp.ini
+++ b/simulations/P2PShowcase/omnetpp.ini
@@ -1,40 +1,49 @@
 [General]
-# General settings
-network = SimpleP2PNetwork
-print-undisposed=true
-sim-time-limit = 1h
+# Disabling statistic recording
+**.statistic-recording = false  ## from a @statistic in ned file
+**.scalar-recording = false ## scalar or a statistic object (cStdDev to record summary statistics)
+**.vector-recording = false ## output vector (recorded using cOutVector objects)
+**.bin-recording = false ##  bins of a histogram object (cHistogram, cPSquare, cKSplit)
 
-include signals-and-events.ini
-
-# DataEngine settings
-*.simData.manager.experiment = "Test P2P Network"
-*.simData.engine.typename = "JsonDataEngine"
-*.simData.engine.apps = readJSON("../../database/json/apps.json")
-*.simData.engine.vms = readJSON("../../database/json/vms.json")
-*.simData.engine.slas = []
-*.simData.engine.users = []
-*.simData.engine.experiments = []
-
-# Networking settings
-*.configurator.config = readXML("network/networkconf.xml")
-*.dns.db.zoneConfig = readJSON("network/dnszones.json")
+# Routing settings
 **.ipv4.arp.typename = "GlobalArp"
+*.*.ipv4.routingTable.netmaskRoutes = ""
 
-# Pointers to the DataManager/MessageQueue/DNS
-**.dataManagerPath = "simData.manager"
-**.dns = "10.0.0.2"
-**.smqIp = "10.0.0.1"
-**.ispResolver = "10.0.0.2"
+# Logging? 
+*.switch.**.cmdenv-log-level = off
 
-*.user*.edgeUser.vms = []
-*.user*.edgeUser.localApps = [{"name":"my-service", "type": "P2PDiscoveryApp"}]
-*.netStack.nodeTopic = "user"
-*.user*.edgeUser.remoteApps = []
-*.user*.edgeUser.sensors = []
+# Limit the simulation time
+sim-time-limit = 10s
 
-[Config targetDc]
-*.user.deploymentZone = "cloud"
+network = P2PNetwork
+*.*.hostedApp.resolverPath = "^.^.resolver"
+*.*.resolver.ispResolver = "10.0.0.3"
 
-[Config targetFog]
-*.user*.edgeUser.deploymentZone = "edge"
+*.*.hostedApp.userAppName = "P2PApplication"
+*.*.hostedApp.app.dnsSeed = "p2p.mainnet.com"
+*.*.hostedApp.app.dnsIp = "10.0.0.2"
+*.*.hostedApp.pid = 0
 
+*.peerA.hostedApp.app.localIp = "10.0.0.1"
+*.peerA.hostedApp.app.testIp = "10.0.0.4"
+*.peerB.hostedApp.app.localIp = "10.0.0.4"
+*.peerB.hostedApp.app.testIp = "10.0.0.1"
+*.peerC.hostedApp.app.localIp = "10.0.0.5"
+*.peerC.hostedApp.app.testIp = "10.0.0.4"
+*.peerD.hostedApp.app.localIp = "10.0.0.6"
+*.peerD.hostedApp.app.testIp = "10.0.0.4"
+*.peerE.hostedApp.app.localIp = "10.0.0.7"
+*.peerE.hostedApp.app.testIp = "10.0.0.4"
+
+# Config Ip assignment
+*.configurator.config = xml("<config> \
+	<interface hosts='*.peerA' address='10.0.0.1'/> \
+	<interface hosts='*.dns' address='10.0.0.2'/> \
+	<interface hosts='*.resolver' address='10.0.0.3'/> \
+	<interface hosts='*.peerB' address='10.0.0.4'/> \
+	<interface hosts='**' address='10.x.x.x' netmask='255.x.x.x'/> \
+</config>")
+
+# Load entries into DNS
+*.dns.db.zoneConfig = readJSON("DnsZone.json")
+*.resolver.db.zoneConfig = readJSON("ResolverZones.json")
