feat(p2p-pow): divided p2p architecture into message handler (P2PApp) and builder

--- a/simulations/P2PShowcase/omnetpp.ini
+++ b/simulations/P2PShowcase/omnetpp.ini
@@ -19,7 +19,7 @@ network = P2PNetwork
 *.*.hostedApp.resolverPath = "^.^.resolver"
 *.*.resolver.ispResolver = "10.0.0.3"
 
-*.*.hostedApp.userAppName = "PowFlowManager"
+*.*.hostedApp.userAppName = "PowP2PApp"
 *.*.hostedApp.app.dnsSeed = "p2p.mainnet.com"
 *.*.hostedApp.app.dnsIp = "10.0.0.2"
 *.*.hostedApp.pid = 0
