build: changed simulation peer variables for array of peers

--- a/simulations/P2PShowcase/omnetpp.ini
+++ b/simulations/P2PShowcase/omnetpp.ini
@@ -24,6 +24,8 @@ network = P2PNetwork
 *.*.hostedApp.app.dnsIp = "10.0.0.1"
 *.*.hostedApp.pid = 0
 
+*.numPeers = 10
+
 # Config Ip assignment
 *.configurator.config = xml("<config> \
 	<interface hosts='*.dns' address='10.0.0.1'/> \
