feat: some data messages + default constructor for Block

--- a/src/Makefile
+++ b/src/Makefile
@@ -151,7 +151,12 @@ OBJS = \
     $O/s2f/architecture/nodes/iot/IotPayload_m.o \
     $O/s2f/architecture/p2p/pow/PowNetworkPeer_m.o \
     $O/s2f/architecture/p2p/pow/messages/Address_m.o \
+    $O/s2f/architecture/p2p/pow/messages/Block_m.o \
+    $O/s2f/architecture/p2p/pow/messages/GetBlocks_m.o \
     $O/s2f/architecture/p2p/pow/messages/Header_m.o \
+    $O/s2f/architecture/p2p/pow/messages/Headers_m.o \
+    $O/s2f/architecture/p2p/pow/messages/Inv_m.o \
+    $O/s2f/architecture/p2p/pow/messages/Inventory_m.o \
     $O/s2f/architecture/p2p/pow/messages/PingPong_m.o \
     $O/s2f/architecture/p2p/pow/messages/Version_m.o \
     $O/s2f/management/cloudprovider/NodeUpdate_m.o \
@@ -184,7 +189,12 @@ MSGFILES = \
     s2f/architecture/nodes/iot/IotPayload.msg \
     s2f/architecture/p2p/pow/PowNetworkPeer.msg \
     s2f/architecture/p2p/pow/messages/Address.msg \
+    s2f/architecture/p2p/pow/messages/Block.msg \
+    s2f/architecture/p2p/pow/messages/GetBlocks.msg \
     s2f/architecture/p2p/pow/messages/Header.msg \
+    s2f/architecture/p2p/pow/messages/Headers.msg \
+    s2f/architecture/p2p/pow/messages/Inv.msg \
+    s2f/architecture/p2p/pow/messages/Inventory.msg \
     s2f/architecture/p2p/pow/messages/PingPong.msg \
     s2f/architecture/p2p/pow/messages/Version.msg \
     s2f/management/cloudprovider/NodeUpdate.msg \
