refactor: P2PBase, PowP2PApp, NetworkPeer -> P2P, PowP2P, Peer

--- a/simulations/P2PShowcase/omnetpp.ini
+++ b/simulations/P2PShowcase/omnetpp.ini
@@ -19,7 +19,7 @@ network = P2PNetwork
 *.*.hostedApp.resolverPath = "^.^.resolver"
 *.*.resolver.ispResolver = "10.0.0.1"
 
-*.*.hostedApp.userAppName = "PowP2PApp"
+*.*.hostedApp.userAppName = "PowP2P"
 *.*.hostedApp.app.dnsSeed = "p2p.mainnet.com"
 *.*.hostedApp.app.dnsIp = "10.0.0.1"
 *.*.hostedApp.pid = 0
