chore: changed p2p network to showcase new architecture

--- a/simulations/P2PShowcase/omnetpp.ini
+++ b/simulations/P2PShowcase/omnetpp.ini
@@ -19,10 +19,10 @@ network = P2PNetwork
 *.*.hostedApp.resolverPath = "^.^.resolver"
 *.*.resolver.ispResolver = "10.0.0.1"
 
-*.*.hostedApp.userAppName = "PowP2P"
-*.*.hostedApp.app.dnsSeed = "p2p.mainnet.com"
-*.*.hostedApp.app.dnsIp = "10.0.0.1"
-*.*.hostedApp.pid = 0
+*.*.protocol.userAppName = "PowP2P"
+*.*.protocol.app.dnsSeed = "p2p.mainnet.com"
+*.*.protocol.app.dnsIp = "10.0.0.1"
+*.*.protocol.pid = 0
 
 *.numPeers = 2
 
