fix: network to make it run -- still crashes though

--- a/simulations/P2PShowcase/omnetpp.ini
+++ b/simulations/P2PShowcase/omnetpp.ini
@@ -19,9 +19,11 @@ network = P2PNetwork
 *.*.hostedApp.resolverPath = "^.^.resolver"
 *.*.resolver.ispResolver = "10.0.0.1"
 
-*.*.protocol.userAppName = "PowP2P"
-*.*.protocol.app.dnsSeed = "p2p.mainnet.com"
-*.*.protocol.app.dnsIp = "10.0.0.1"
+*.*.protocol.p2pProto = "s2f.architecture.p2p.pow.PowP2P"
+*.*.protocol.discoveryService.dnsSeed = "p2p.mainnet.com"
+*.*.protocol.discoveryService.dnsIp = "10.0.0.1"
+*.*.protocol.*.listeningPort = 8333
+*.*.protocol.listeningPort = 8333
 *.*.protocol.pid = 0
 
 *.numPeers = 2
