--- a/simulations/P2PShowcase/omnetpp.ini
+++ b/simulations/P2PShowcase/omnetpp.ini
@@ -16,14 +16,13 @@
 sim-time-limit = 3600s
 
 network = P2PNetwork
-*.*.hostedApp.resolverPath = "^.^.resolver"
+*.*.protocol.resolverPath = "^.^.resolver"
 *.*.resolver.ispResolver = "10.0.0.1"
 
 *.*.protocol.p2pProto = "s2f.architecture.p2p.pow.PowP2P"
 *.*.protocol.discoveryService.dnsSeed = "p2p.mainnet.com"
 *.*.protocol.discoveryService.dnsIp = "10.0.0.1"
 *.*.protocol.*.listeningPort = 8333
-*.*.protocol.listeningPort = 8333
 *.*.protocol.pid = 0
 
 *.numPeers = 2
