feat: decoupled dns service

--- a/simulations/P2PShowcase/omnetpp.ini
+++ b/simulations/P2PShowcase/omnetpp.ini
@@ -16,14 +16,24 @@
 sim-time-limit = 3600s
 
 network = P2PNetwork
-*.*.protocol.resolverPath = "^.^.resolver"
 *.*.resolver.ispResolver = "10.0.0.1"
 
-*.*.protocol.p2pProto = "s2f.architecture.p2p.pow.PowP2P"
-*.*.protocol.discoveryService.dnsSeed = "p2p.mainnet.com"
-*.*.protocol.discoveryService.dnsIp = "10.0.0.1"
-*.*.protocol.*.listeningPort = 8333
+## P2P Data
+*.*.protocol.userAppName = "PowP2P"
+*.*.protocol.app.listeningPort = 8333
+*.*.protocol.app.discoveryPath = "^.^.discoveryService.app"
+*.*.protocol.app.internalPath = "^.^.node"
 *.*.protocol.pid = 0
+
+## Dns Discovery
+*.*.discoveryService.userAppName = "DnsDiscoveryService"
+*.*.discoveryService.app.dnsSeed = "p2p.mainnet.com"
+*.*.discoveryService.app.dnsIp = "10.0.0.1"
+*.*.discoveryService.pid = 1
+
+## Common params
+*.*.*.resolverPath = "^.^.resolver"
+
 
 *.numPeers = 2
 
