--- a/src/Makefile
+++ b/src/Makefile
@@ -137,6 +137,7 @@ OBJS = \
     $O/s2f/users/generators/UserGenerator_simple.o \
     $O/s2f/users/generators/UserGeneratorBase.o \
     $O/s2f/users/generators/UserGeneratorCost.o \
+    $O/s2f/apps/p2p/InternalRequest_m.o \
     $O/s2f/apps/p2p/Peer_m.o \
     $O/s2f/apps/p2p/discovery/DiscoveryResolution_m.o \
     $O/s2f/apps/services/SimServiceReq_m.o \
@@ -183,6 +184,7 @@ OBJS = \
 
 # Message files
 MSGFILES = \
+    s2f/apps/p2p/InternalRequest.msg \
     s2f/apps/p2p/Peer.msg \
     s2f/apps/p2p/discovery/DiscoveryResolution.msg \
     s2f/apps/services/SimServiceReq.msg \
