feat: hardcoded ip resolutions

--- a/simulations/P2PShowcase/omnetpp.ini
+++ b/simulations/P2PShowcase/omnetpp.ini
@@ -26,9 +26,9 @@ network = P2PNetwork
 *.*.protocol.pid = 0
 
 ## Dns Discovery
-*.*.discoveryService.userAppName = "DnsDiscoveryService"
-*.*.discoveryService.app.dnsSeed = "p2p.mainnet.com"
-*.*.discoveryService.app.dnsIp = "10.0.0.1"
+*.*.discoveryService.userAppName = "HardcodedDiscoveryService"
+#*.*.discoveryService.app.dnsSeed = "p2p.mainnet.com"
+#*.*.discoveryService.app.dnsIp = "10.0.0.1"
 *.*.discoveryService.pid = 1
 
 ## Common params
