fix: removed hardcoded discoveryServices param

--- a/simulations/P2PShowcase/omnetpp.ini
+++ b/simulations/P2PShowcase/omnetpp.ini
@@ -22,7 +22,7 @@ network = P2PNetwork
 ## P2P Data
 *.*.protocol.userAppName = "PowP2P"
 *.*.protocol.app.listeningPort = 8333
-*.*.protocol.app.discoveryPath = "^.^.discoveryService.app"
+*.*.protocol.app.discoveryPath = "^.^.discoveryService"
 *.*.protocol.app.internalPath = "^.^.node"
 *.*.protocol.pid = 0
 
