fix: simulation was halting due to incorrect DNS connection

--- a/simulations/P2PShowcase/omnetpp.ini
+++ b/simulations/P2PShowcase/omnetpp.ini
@@ -28,7 +28,9 @@ network = P2PNetwork
 
 ## Discovery Services
 *.*.discoveryService[0].userAppName = "HardcodedDiscoveryService"
+*.*.discoveryService[1].app.addressList = ["10.0.0.2"]
 *.*.discoveryService[0].pid = 1
+
 *.*.discoveryService[1].userAppName = "DnsDiscoveryService"
 *.*.discoveryService[1].app.dnsSeed = "p2p.mainnet.com"
 *.*.discoveryService[1].app.dnsIp = "10.0.0.1"
