feat: Simcan2Chain improvements inclusion into Simcan2Fog
* header .msg format

* chore: changed makefile src project

* pseudocode for p2p protocol as app

* added sample p2p app to db

* sample p2p startup and shutdown

* Sample p2p simulation based on EdgeScenario

It is only being tested that both peers can run the application locally.
Future commits should remove edgeUser altogether, as it will run on fog
nodes directly with no intervention.

* feat: p2p discovery through static IPs

* simple simulation scenario with five peers

* fix: incorrect parameter name

* chore: decapsulated P2PApplication -> P2PBase (apps.p2p) + protocol specifics (architecture.p2p)

* changed initial connection based on handleConnectReturn

* feat(p2p-pow): divided p2p architecture into message handler (P2PApp) and builder

* doc: added docstrings for classes and methods

* chore(p2p): changed peers/peerCandidates data structure

* feat: hardcoded scenario for peer address propagation

* chore: peer struct inheritance according to protocol

* chore: NetworkPeer pointer conversion + method doc

* fix: added missing signals for DnsRegistryService

* feat: DNS seed registry/resolution on P2PBase

* refactor: msg builder

* fix:removed unknown config option from EdgeMediumScenario omnetpp.ini

* feat: support for multiple Dns record resolution + appbase extension

* feat: override multi-record resolution behavior for p2p

* refactor: .msg array declaration according to OMNeT++ standard

* fix: removed resolver server from p2p network

The resolver server stored previous query resolution results in a caché,
which (reasonably) does not expect records to change often, a behavior
not compatible with this specific protocol. AppBase still supports
authoritative server resolution if a resolver component exists within
the module, so this was the approach followed here.

* refactor: flow management in P2PBase.cc

With real DNS registration and resolution out of the way, it is time to
begin proper 

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 #
-# OMNeT++/OMNEST Makefile for $(LIB_PREFIX)Simcan2Fog
+# OMNeT++/OMNEST Makefile for $(LIB_PREFIX)simcan2chain
 #
 # This file was generated with the command:
 #  opp_makemake --make-so -f --deep -O out -KINET4_5_PROJ=../../inet4.5 -DINET_IMPORT -I. -I$$\(INET4_5_PROJ\)/src -L$$\(INET4_5_PROJ\)/src -lINET$$\(D\)
@@ -7,7 +7,7 @@
 
 # Name of target to be created (-o option)
 TARGET_DIR = .
-TARGET_NAME = $(LIB_PREFIX)Simcan2Fog$(D)
+TARGET_NAME = $(LIB_PREFIX)simcan2chain$(D)
 TARGET = $(TARGET_NAME)$(SHARED_LIB_SUFFIX)
 TARGET_IMPLIB = $(TARGET_NAME)$(IMPLIB_SUFFIX)
 TARGET_IMPDEF = $(TARGET_NAME)$(IMPDEF_SUFFIX)
@@ -38,6 +38,9 @@ OBJS = \
     $O/s2f/apps/endpoints/ServerEndpoint.o \
     $O/s2f/apps/iot/IotApplication.o \
     $O/s2f/apps/iot/LocalIotApplication.o \
+    $O/s2f/apps/p2p/P2P.o \
+    $O/s2f/apps/p2p/discovery/dns/DnsDiscoveryService.o \
+    $O/s2f/apps/p2p/discovery/hardcoded/HardcodedDiscoveryService.o \
     $O/s2f/apps/services/IotService.o \
     $O/s2f/apps/services/SimService.o \
     $O/s2f/architecture/cpu/CpuCore.o \
@@ -63,6 +66,21 @@ OBJS = \
     $O/s2f/architecture/net/stack/resolver/StubDnsResolver.o \
     $O/s2f/architecture/net/switch/Switch.o \
     $O/s2f/architecture/nodes/iot/sensors/IotSensorModel.o \
+    $O/s2f/architecture/p2p/pow/PowP2P.o \
+    $O/s2f/architecture/p2p/pow/chain/Block.o \
+    $O/s2f/architecture/p2p/pow/chain/Blockchain.o \
+    $O/s2f/architecture/p2p/pow/chain/InOut.o \
+    $O/s2f/architecture/p2p/pow/chain/Transaction.o \
+    $O/s2f/architecture/p2p/pow/chain/UtxoSet.o \
+    $O/s2f/architecture/p2p/pow/consumers/AddressMsgConsumer.o \
+    $O/s2f/architecture/p2p/pow/consumers/GetAddressMsgConsumer.o \
+    $O/s2f/architecture/p2p/pow/consumers/PingMsgConsumer.o \
+    $O/s2f/architecture/p2p/pow/consumers/PongMsgConsumer.o \
+    $O/s2f/architecture/p2p/pow/consumers/VerackMsgConsumer.o \
+    $O/s2f/architecture/p2p/pow/consumers/VersionMsgConsumer.o \
+    $O/s2f/architecture/p2p/pow/nodes/FullNode.o \
+    $O/s2f/architecture/p2p/pow/producers/PingMsgProducer.o \
+    $O/s2f/architecture/p2p/pow/producers/VersionMsgProducer.o \
     $O/s2f/core/cSIMCAN_Core.o \
     $O/s2f/core/include/internal_types.o \
     $O/s2f/core/include/signals.o \
@@ -104,6 +122,8 @@ OBJS = \
     $O/s2f/os/control/ControlEntries.o \
     $O/s2f/os/control/ProcessDemux.o \
     $O/s2f/os/control/VmControlTable.o \
+    $O/s2f/os/crypto/base.o \
+    $O/s2f/os/crypto/keypair.o \
     $O/s2f/os/hardwaremanagers/DcHardwareManager.o \
     $O/s2f/os/hardwaremanagers/EdgeHardwareManager.o \
     $O/s2f/os/hardwaremanagers/HardwareManager.o \
@@ -118,6 +138,9 @@ OBJS = \
     $O/s2f/users/generators/UserGenerator_simple.o \
     $O/s2f/users/generators/UserGeneratorBase.o \
     $O/s2f/users/generators/UserGeneratorCost.o \
+    $O/s2f/apps/p2p/InnerRequest_m.o \
+    $O/s2f/apps/p2p/Peer_m.o \
+    $O/s2f/apps/p2p/discovery/DiscoveryResolution_m.o \
     $O/s2f/apps/services/SimServiceReq_m.o \
     $O/s2f/architecture/dns/DnsRequest_m.o \
     $O/s2f/architecture/dns/ResourceRecord_m.o \
@@ -130,6 +153,23 @@ OBJS = \
     $O/s2f/architecture/net/stack/proxy/ProxyServiceRequest_m.o \
     $O/s2f/architecture/net/stack/resolver/StubDnsRequest_m.o \
     $O/s2f/architecture/nodes/iot/IotPayload_m.o \
+    $O/s2f/architecture/p2p/pow/PowPeer_m.o \
+    $O/s2f/architecture/p2p/pow/messages/Address_m.o \
+    $O/s2f/architecture/p2p/pow/messages/Block_m.o \
+    $O/s2f/architecture/p2p/pow/messages/BlockTxn_m.o \
+    $O/s2f/architecture/p2p/pow/messages/CmpctBlock_m.o \
+    $O/s2f/architecture/p2p/pow/messages/GetBlocks_m.o \
+    $O/s2f/architecture/p2p/pow/messages/GetBlockTxn_m.o \
+    $O/s2f/architecture/p2p/pow/messages/Header_m.o \
+    $O/s2f/architecture/p2p/pow/messages/Headers_m.o \
+    $O/s2f/architecture/p2p/pow/messages/Inv_m.o \
+    $O/s2f/architecture/p2p/pow/messages/Inventory_m.o \
+    $O/s2f/architecture/p2p/pow/messages/MerkleBlock_m.o \
+    $O/s2f/architecture/p2p/pow/messages/MsgMetadata_m.o \
+    $O/s2f/architecture/p2p/pow/messages/PingPong_m.o \
+    $O/s2f/architecture/p2p/pow/messages/SendCmpct_m.o \
+    $O/s2f/architecture/p2p/pow/messages/Tx_m.o \
+    $O/s2f/architecture/p2p/pow/messages/Version_m.o \
     $O/s2f/management/cloudprovider/NodeUpdate_m.o \
     $O/s2f/messages/INET_AppMessage_m.o \
     $O/s2f/messages/SIMCAN_Message_m.o \
@@ -145,6 +185,9 @@ OBJS = \
 
 # Message files
 MSGFILES = \
+    s2f/apps/p2p/InnerRequest.msg \
+    s2f/apps/p2p/Peer.msg \
+    s2f/apps/p2p/discovery/DiscoveryResolution.msg \
     s2f/apps/services/SimServiceReq.msg \
     s2f/architecture/dns/DnsRequest.msg \
     s2f/architecture/dns/ResourceRecord.msg \
@@ -157,6 +200,23 @@ MSGFILES = \
     s2f/architecture/net/stack/proxy/ProxyServiceRequest.msg \
     s2f/architecture/net/stack/resolver/StubDnsRequest.msg \
     s2f/architecture/nodes/iot/IotPayload.msg \
+    s2f/architecture/p2p/pow/PowPeer.msg \
+    s2f/architecture/p2p/pow/messages/Address.msg \
+    s2f/architecture/p2p/pow/messages/Block.msg \
+    s2f/architecture/p2p/pow/messages/BlockTxn.msg \
+    s2f/architecture/p2p/pow/messages/CmpctBlock.msg \
+    s2f/architecture/p2p/pow/messages/GetBlocks.msg \
+    s2f/architecture/p2p/pow/messages/GetBlockTxn.msg \
+    s2f/architecture/p2p/pow/messages/Header.msg \
+    s2f/architecture/p2p/pow/messages/Headers.msg \
+    s2f/architecture/p2p/pow/messages/Inv.msg \
+    s2f/architecture/p2p/pow/messages/Inventory.msg \
+    s2f/architecture/p2p/pow/messages/MerkleBlock.msg \
+    s2f/architecture/p2p/pow/messages/MsgMetadata.msg \
+    s2f/architecture/p2p/pow/messages/PingPong.msg \
+    s2f/architecture/p2p/pow/messages/SendCmpct.msg \
+    s2f/architecture/p2p/pow/messages/Tx.msg \
+    s2f/architecture/p2p/pow/messages/Version.msg \
     s2f/management/cloudprovider/NodeUpdate.msg \
     s2f/messages/INET_AppMessage.msg \
     s2f/messages/SIMCAN_Message.msg \
