fix: incorrect enum values + added delegate as default behavior for unknown messages

--- a/simulations/P2PShowcase/omnetpp.ini
+++ b/simulations/P2PShowcase/omnetpp.ini
@@ -23,7 +23,7 @@ network = P2PNetwork
 *.*.protocol.userAppName = "PowP2P"
 *.*.protocol.app.listeningPort = 8333
 *.*.protocol.app.discoveryPath = "^.^.discoveryService"
-*.*.protocol.app.internalPath = "^.^.node"
+*.*.protocol.app.nodePath = "^.^.node"
 *.*.protocol.pid = 0
 
 ## Discovery Services
