fix: Fixed bugs
Fixed
 + Namespace for iot is now s2f::iot instead of iot
 + Fixed the inclusion of the IoT messages into the Data segment of the packet
   instead of the Back segment
 + Worked around a bug that causes QtEnv to segfault. Don't forget to add "\n"
   when logging or you'll stumble onto this bug.

--- a/src/Makefile
+++ b/src/Makefile
@@ -60,6 +60,7 @@ OBJS = \
     $O/s2f/architecture/net/stack/registry/ServiceRegistrar.o \
     $O/s2f/architecture/net/stack/resolver/StubDnsResolver.o \
     $O/s2f/architecture/net/switch/Switch.o \
+    $O/s2f/architecture/nodes/iot/actuators/IotActuatorModel.o \
     $O/s2f/architecture/nodes/iot/sensors/IotSensorModel.o \
     $O/s2f/core/cSIMCAN_Core.o \
     $O/s2f/core/include/internal_types.o \
